<resources>
    <string name="app_name">APP</string>

    <!-- 登录 -->
    <string name="username">手机号</string>
    <string name="userpwd">密码</string>
    <string name="submit">登录</string>
    <string name="code">验证码</string>
    <string name="tv_repwd">忘记密码</string>
    <string name="tv_register">创建账号</string>
    <string name="tv_other_login">第三方登录</string>
    <string name="tv_copyright">版权归仙歌公司所有</string>


    <!-- title -->
    <string name="register">注册</string>
    <string name="repassword">重置密码</string>
    <string name="deal">时间窗平台协议</string>
    <string name="add">新增</string>
    <string name="editpwd">修改密码</string>

    <string name="re_movie_list">正在上映</string>
    <string name="coming_movie_list">即将上映</string>
    <string name="top_movie_list">经典TOP250</string>
    <string name="top_movie_search">搜索结果</string>
    <string name="movie_info">惊天魔盗团</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="action_settings">Settings</string>


    <string name="VideoView_error_text_invalid_progressive_playback">Invalidprogressiveplayback</string>
    <string name="VideoView_error_text_unknown">Unknown</string>
    <string name="vdec">vdec</string>
    <string name="fps">fps</string>
    <string name="v_cache">v-cache</string>
    <string name="a_cache">a-cache</string>
    <string name="load_cost">load-cost</string>
    <string name="seek_cost">seek_cost</string>
    <string name="seek_load_cost">seek_load_cost</string>
    <string name="tcp_speed">tcp_speed</string>
    <string name="bit_rate">bit_rate</string>
    <string name="VideoView_ar_aspect_fit_parent">Aspect/Fitparent</string>
    <string name="VideoView_ar_aspect_fill_parent">Aspect/Fillparent</string>
    <string name="VideoView_ar_aspect_wrap_content">Aspect/Wrapcontent</string>
    <string name="VideoView_ar_match_parent">Free/Fillparent</string>
    <string name="VideoView_ar_16_9_fit_parent">16:9/Fitparent</string>
    <string name="VideoView_ar_4_3_fit_parent">4:3/Fitparent</string>
    <string name="N_A">N/A</string>
    <string name="close">Close</string>
    <string name="VideoView_error_button">OK</string>
    <string name="VideoView_render_none">Render:None</string>
    <string name="VideoView_render_surface_view">Render:SurfaceView</string>
    <string name="VideoView_render_texture_view">Render:TextureView</string>
    <string name="VideoView_player_none">Player:None</string>
    <string name="VideoView_player_AndroidMediaPlayer">Player:AndroidMediaPlayer</string>
    <string name="VideoView_player_IjkMediaPlayer">Player:IjkMediaPlayer</string>
    <string name="VideoView_player_IjkExoMediaPlayer">Player:IjkExoMediaPlayer</string>
    <string name="mi_player">Player</string>
    <string name="mi_media">Media</string>
    <string name="mi_profile_level">Profilelevel</string>
    <string name="mi_pixel_format">Pixelformat</string>
    <string name="mi_resolution">Resolution</string>
    <string name="mi_length">Length</string>
    <string name="mi_stream_fmt1">Stream#%d</string>
    <string name="mi_type">Type</string>
    <string name="mi_language">Language</string>
    <string name="mi_codec">Codec</string>
    <string name="mi_frame_rate">Framerate</string>
    <string name="mi_bit_rate">Bitrate</string>
    <string name="mi_sample_rate">Samplerate</string>
    <string name="mi_channels">Channels</string>
    <string name="mi__selected_video_track">*</string>
    <string name="mi__selected_audio_track">*</string>
    <string name="mi__selected_subtitle_track">*</string>
    <string name="media_information">MediaInformation</string>
    <string name="TrackType_video">Video</string>
    <string name="TrackType_audio">Audio</string>
    <string name="TrackType_subtitle">Subtitle</string>
    <string name="TrackType_timedtext">Timedtext</string>
    <string name="TrackType_metadata">Metadata</string>
    <string name="TrackType_unknown">Unknown</string>
    <string name="title_activity_about">AboutActivity</string>

</resources>
