<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="0px"
    >
   <com.facebook.drawee.view.SimpleDraweeView
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       fresco:placeholderImage="@drawable/bg"
       fresco:placeholderImageScaleType="focusCrop"
       >
   </com.facebook.drawee.view.SimpleDraweeView>
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical"
       >
   <ImageView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:src="@drawable/logo"
       android:layout_gravity="center_horizontal"
       android:layout_marginTop="266px"
       />

   <RelativeLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginTop="150px"
       android:layout_marginLeft="40px"
       android:layout_marginRight="40px"
       >
      <ImageView
          android:id="@+id/iv_user"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:src="@drawable/user_icon"
          android:layout_marginRight="20px"
          />
      <EditText
          android:id="@+id/et_username"
          android:layout_width="580px"
          android:layout_height="wrap_content"
          android:hint="@string/username"
          android:textColor="@color/white"
          android:textColorHint="@color/white_50"
          android:background="@null"
          android:maxLength="11"
          android:maxLines="1"
          android:imeOptions="actionNone"
          style="@style/textSize"
          android:layout_marginTop="5px"
          android:layout_toRightOf="@+id/iv_user"
          />

      <View
          android:layout_below="@+id/et_username"
          android:layout_width="match_parent"
          android:layout_height="1px"
          android:background="@color/white_30"
          android:layout_marginTop="30px"
          />

   </RelativeLayout>

   <RelativeLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginTop="30px"
       android:layout_marginLeft="40px"
       android:layout_marginRight="40px"
       >
      <ImageView
          android:id="@+id/iv_pwd"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:src="@drawable/pwd_icon"
          android:layout_marginRight="20px"
          />
      <EditText
          android:id="@+id/et_userpwd"
          android:layout_width="580px"
          android:layout_height="wrap_content"
          android:hint="@string/userpwd"
          android:textColor="@color/white"
          android:textColorHint="@color/white_50"
          android:background="@null"
          android:maxLength="16"
          android:inputType="textPassword"
          android:maxLines="1"
          android:imeOptions="actionDone"
          style="@style/textSize"
          android:layout_marginTop="5px"
          android:layout_toRightOf="@+id/iv_pwd"
          />
      <ImageView
          android:id="@+id/iv_eye"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:src="@drawable/closeeye_icon"
          android:layout_marginTop="10px"
          android:layout_toRightOf="@+id/et_userpwd"
          />
      <View
          android:layout_below="@+id/et_userpwd"
          android:layout_width="match_parent"
          android:layout_height="1px"
          android:background="@color/white_30"
          android:layout_marginTop="30px"
          />

   </RelativeLayout>

   <Button
       android:id="@+id/bt_login"
       android:layout_width="match_parent"
       android:layout_height="84px"
       android:layout_marginTop="90px"
       android:layout_marginLeft="20px"
       android:layout_marginRight="20px"
       android:textSize="36px"
       android:text="@string/submit"
       android:background="@drawable/bt_login"
       />

   <RelativeLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginTop="20px"
       android:layout_marginRight="30px"
       android:layout_marginLeft="30px"
       >
      <TextView
          android:id="@+id/tv_repwd"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/tv_repwd"
          style="@style/textSize"
          android:textColor="@color/white_90"
          />
      <TextView
          android:id="@+id/tv_register"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/tv_register"
          android:textColor="@color/white_90"
          android:layout_alignParentRight="true"
          style="@style/textSize"
          />
   </RelativeLayout>
   
   <TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/tv_other_login"
       android:textColor="@color/white"
       style="@style/textSize"
       android:layout_marginTop="128px"
       android:layout_gravity="center_horizontal"
       />

   <RelativeLayout
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_gravity="center_horizontal"
       android:layout_marginTop="50px"
       >

      <ImageView
          android:id="@+id/iv_wx_login"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:src="@drawable/wechat"
          />

      <ImageView
          android:id="@+id/iv_qq_login"
          android:layout_toRightOf="@+id/iv_wx_login"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:src="@drawable/qq"
          android:layout_marginLeft="130px"
          android:layout_marginRight="130px"
          />

      <ImageView
          android:id="@+id/iv_weibo_login"
          android:layout_toRightOf="@+id/iv_qq_login"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:src="@drawable/weibo"
          />

   </RelativeLayout>

   <TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_gravity="center_horizontal"
       android:textSize="20px"
       android:textColor="@color/white_90"
       android:layout_marginTop="65px"
       android:text="@string/tv_copyright"
       />
   </LinearLayout>
</RelativeLayout>